# time-integration-solver

./: .gitignore  CMakeLists.txt  Euler.csv  Heun_ordre2.csv  README.md  RK4_ordre2.csv  vs64_2019_build.bat  vs64_build.bat
include/: CUDA_Euler.cuh  CUDA_Heun.cuh  CUDA_RK4.cuh  CUDA_Toolbox.cuh  EulerSolver.hpp  FirstOrderDifferentialEquationSolver.hpp  HeunSolver.hpp  OrdinaryDifferentialEquationSolver.hpp  RungeKutta4Solver.hpp  Timer.hpp  Toolbox.hpp
results/: Euler.csv  Heun_ordre1.csv  RK4_ordre1.csv
src/: CUDA_Euler.cu  CUDA_Heun.cu  CUDA_RK4.cu  CUDA_Toolbox.cu  EulerSolver.cpp  FirstOrderDifferentialEquationSolver.cpp  HeunSolver.cpp  OrdinaryDifferentialEquationSolver.cpp  RungeKutta4Solver.cpp  Toolbox.cpp  main.cpp
